<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="6dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/eventImage"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:contentDescription="@string/event_avatar" />

                <TextView
                    android:id="@+id/eventTitleLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toStartOf="@+id/collapseViewButton"
                    app:layout_constraintStart_toEndOf="@+id/eventImage"
                    app:layout_constraintTop_toTopOf="@+id/eventImage" />

                <TextView
                    android:id="@+id/startDateLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#5E5D5D"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="@+id/eventTitleLabel"
                    app:layout_constraintStart_toStartOf="@+id/eventTitleLabel"
                    app:layout_constraintTop_toBottomOf="@+id/eventTitleLabel" />

                <TextView
                    android:id="@+id/endDateLabel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="7dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:textColor="#5E5D5D"
                    app:layout_constraintEnd_toEndOf="@+id/startDateLabel"
                    app:layout_constraintStart_toStartOf="@+id/startDateLabel"
                    app:layout_constraintTop_toBottomOf="@+id/startDateLabel" />

                <ImageButton
                    android:id="@+id/collapseViewButton"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/ic_expand"
                    android:background="?attr/selectableItemBackground"
                    android:contentDescription="@string/collapse_view" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:id="@+id/comicContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="12dp"
                    android:gravity="center"
                    android:text="@string/character_comics_label"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <LinearLayout
                    android:id="@+id/comicItemsContainer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="12dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>